--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -7,14 +7,14 @@
     tools:context=".presentation.view.activity.SplashActivity">
 
     <com.airbnb.lottie.LottieAnimationView
-        android:background="@color/primary"
         android:id="@+id/splash_view"
-        app:lottie_rawRes="@raw/splash_animation"
-        app:lottie_autoPlay="true"
-        app:lottie_repeatCount="1"
-        app:lottie_repeatMode="reverse"
-        app:lottie_loop="true"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:background="@color/primary"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/splash_animation"
+        app:lottie_repeatCount="1"
+        app:lottie_repeatMode="reverse" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
