--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -13,8 +13,8 @@
         android:src="@drawable/ic_text_logo"
         app:layout_constraintDimensionRatio="4:1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/barrier"
@@ -24,7 +24,6 @@
         app:constraint_referenced_ids="imageViewBannerSignIn" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:textColorHint="@color/primary"
         android:id="@+id/textLayoutEmail"
         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
         android:layout_width="match_parent"
@@ -32,6 +31,7 @@
         android:layout_marginHorizontal="10dp"
         android:layout_marginTop="15dp"
         android:hint="Email"
+        android:textColorHint="@color/primary"
         app:boxStrokeWidth="0dp"
         app:boxStrokeWidthFocused="0dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,7 +49,6 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:textColorHint="@color/primary"
         android:id="@+id/textLayoutPassword"
         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
         android:layout_width="match_parent"
@@ -57,6 +56,7 @@
         android:layout_marginHorizontal="10dp"
         android:layout_marginTop="15dp"
         android:hint="Password"
+        android:textColorHint="@color/primary"
         app:boxStrokeWidth="0dp"
         app:boxStrokeWidthFocused="0dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -77,39 +77,39 @@
 
     <LinearLayout
         android:id="@+id/layout_default_user"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/textLayoutPassword"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/textLayoutPassword">
 
         <ImageView
-            android:src="@drawable/icon_important"
             android:layout_width="20dp"
-            android:layout_height="20dp"/>
+            android:layout_height="20dp"
+            android:src="@drawable/icon_important" />
 
         <TextView
-            android:layout_marginLeft="5dp"
-            android:text="Click to get default User"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:text="Click to get default User" />
 
     </LinearLayout>
 
     <LinearLayout
-        android:background="@drawable/background_button_border"
         android:id="@+id/sign_in"
         android:layout_width="0dp"
         android:layout_height="50dp"
+        android:background="@drawable/background_button_border"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="6:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textLayoutPassword"
-        app:layout_constraintVertical_bias="0.75"
-        android:gravity="center">
+        app:layout_constraintVertical_bias="0.75">
 
         <TextView
             android:id="@+id/sign_in_text"
@@ -122,6 +122,7 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/text_view_register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -129,11 +130,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/sign_in"
         app:layout_constraintVertical_bias="0.85"
-        android:id="@+id/text_view_register"
         tools:text="Don't have an account?Register" />
 
     <include
-        android:visibility="gone"
+        android:id="@+id/layout_loading"
         layout="@layout/layout_loading"
-        android:id="@+id/layout_loading"/>
+        android:visibility="gone" />
 </androidx.constraintlayout.widget.ConstraintLayout>
