--- a/app/src/main/res/layout/layout_item_cart.xml
+++ b/app/src/main/res/layout/layout_item_cart.xml
@@ -1,132 +1,132 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    app:cardCornerRadius="10dp"
     android:layout_marginHorizontal="10dp"
     android:layout_marginVertical="3dp"
-    app:cardElevation="5dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    app:cardCornerRadius="10dp"
+    app:cardElevation="5dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/card_view_item_cart"
-        android:background="@drawable/background_item_product"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@drawable/background_item_product">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardViewImage_cart"
-            app:layout_constraintHorizontal_bias="0"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="155dp"
+            android:layout_height="0dp"
             android:elevation="5dp"
-            app:layout_constraintDimensionRatio="1.5:1"
-            android:layout_width="0dp"
-            android:layout_height="100dp">
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="1.4:1"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                android:scaleType="fitXY"
                 android:id="@+id/imageView_cart"
-                tools:src="@drawable/ic_logo"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"
+                tools:src="@drawable/ic_logo" />
         </androidx.cardview.widget.CardView>
 
         <TextView
-            app:layout_constraintVertical_chainStyle="spread_inside"
+            android:id="@+id/textViewName_cart"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:paddingLeft="5dp"
             android:textColor="#f20"
-            android:id="@+id/textViewName_cart"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@id/textViewPrice_cart"
             app:layout_constraintLeft_toRightOf="@id/cardViewImage_cart"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:textSize="16sp"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="spread_inside" />
 
         <TextView
-            android:layout_marginLeft="10dp"
-            android:paddingLeft="5dp"
-            android:textColor="#8A8A8A"
             android:id="@+id/textViewPrice_cart"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textViewName_cart"
-            app:layout_constraintBottom_toTopOf="@id/layout_quantity_cart"
-            app:layout_constraintLeft_toRightOf="@id/cardViewImage_cart"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:ellipsize="end"
             android:maxLines="1"
+            android:paddingLeft="5dp"
+            android:textColor="#8A8A8A"
             android:textSize="13sp"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
+            app:layout_constraintBottom_toTopOf="@id/layout_quantity_cart"
+            app:layout_constraintLeft_toRightOf="@id/cardViewImage_cart"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textViewName_cart" />
 
 
         <LinearLayout
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="2dp"
-            android:paddingLeft="5dp"
             android:id="@+id/layout_quantity_cart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/textViewPrice_cart"
-            app:layout_constraintLeft_toRightOf="@id/cardViewImage_cart">
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="2dp"
+            android:paddingLeft="5dp"
+            app:layout_constraintLeft_toRightOf="@id/cardViewImage_cart"
+            app:layout_constraintTop_toBottomOf="@id/textViewPrice_cart">
 
             <ImageView
-                android:src="@drawable/icon_down"
                 android:id="@+id/image_view_down"
-                android:gravity="center"
                 android:layout_width="25dp"
-                android:layout_height="25dp"/>
+                android:layout_height="25dp"
+                android:gravity="center"
+                android:src="@drawable/icon_down" />
 
             <TextView
+                android:id="@+id/quantity_cart"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:layout_marginHorizontal="5dp"
                 android:gravity="center"
-                android:textStyle="italic"
                 android:textColor="#040404"
-                android:id="@+id/quantity_cart"
                 android:textSize="16sp"
-                tools:text="99"
-                android:layout_width="25dp"
-                android:layout_height="25dp"/>
+                android:textStyle="italic"
+                tools:text="99" />
 
             <ImageView
-                android:src="@drawable/icon_up"
                 android:id="@+id/image_view_up"
-                android:gravity="center"
                 android:layout_width="25dp"
-                android:layout_height="25dp"/>
+                android:layout_height="25dp"
+                android:gravity="center"
+                android:src="@drawable/icon_up" />
         </LinearLayout>
 
         <LinearLayout
-            android:layout_marginLeft="10dp"
             android:id="@+id/button_price_cart"
             android:layout_width="wrap_content"
             android:layout_height="35dp"
+            android:layout_marginLeft="10dp"
             android:gravity="center"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/layout_quantity_cart"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/layout_quantity_cart">
 
             <TextView
-                android:textColor="#FFFFFF"
+                android:id="@+id/text_view_totalPriceProduct_cart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
+                android:background="@drawable/background_button_corner_primary"
                 android:paddingHorizontal="10dp"
                 android:paddingVertical="3dp"
-                android:background="@drawable/background_button_corner_primary"
-                android:id="@+id/text_view_totalPriceProduct_cart"
-                android:layout_marginLeft="5dp"
-                android:layout_width="wrap_content"
+                android:textColor="#FFFFFF"
                 android:textSize="16sp"
-                android:layout_height="wrap_content"
-                tools:text="10,000 VND"/>
+                tools:text="10,000 VND" />
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
+
     <include
         android:id="@+id/layout_loading"
         layout="@layout/layout_loading"
