--- a/app/src/main/res/layout/layout_item_product.xml
+++ b/app/src/main/res/layout/layout_item_product.xml
@@ -1,125 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_marginHorizontal="10dp"
+    android:layout_marginVertical="3dp"
     app:cardCornerRadius="5dp"
-    android:layout_margin="5dp"
-    app:cardElevation="5dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    app:cardElevation="5dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardViewImage"
-            app:layout_constraintHorizontal_bias="0"
+        <ImageView
+            android:id="@+id/image_view_product"
+            android:layout_width="155dp"
+            android:layout_height="0dp"
+            android:scaleType="fitXY"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:elevation="5dp"
-            app:layout_constraintDimensionRatio="1.5:1"
-            android:layout_width="0dp"
-            android:layout_height="100dp">
-
-            <ImageView
-                android:scaleType="fitXY"
-                android:id="@+id/imageView"
-                tools:src="@drawable/ic_logo"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-        </androidx.cardview.widget.CardView>
+            app:layout_constraintDimensionRatio="1.4:1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            app:layout_constraintVertical_chainStyle="spread_inside"
+            android:id="@+id/text_view_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:paddingLeft="5dp"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:textColor="#f20"
-            android:id="@+id/textViewName"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/textViewAddress"
-            app:layout_constraintLeft_toRightOf="@id/cardViewImage"
-            android:ellipsize="end"
-            android:maxLines="1"
             android:textSize="16sp"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
+            app:layout_constraintBottom_toTopOf="@id/text_view_address"
+            app:layout_constraintLeft_toRightOf="@id/image_view_product"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            android:id="@+id/text_view_address"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:paddingLeft="5dp"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:textColor="#8A8A8A"
-            android:id="@+id/textViewAddress"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textViewName"
-            app:layout_constraintBottom_toTopOf="@id/textViewPrice"
-            app:layout_constraintLeft_toRightOf="@id/cardViewImage"
-            android:ellipsize="end"
-            android:maxLines="1"
             android:textSize="13sp"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:layout_marginLeft="10dp"
-            android:paddingLeft="5dp"
-            android:textStyle="italic"
-            android:textColor="#040404"
-            android:id="@+id/textViewPrice"
-            app:layout_constraintTop_toBottomOf="@id/textViewAddress"
+            app:layout_constraintBottom_toTopOf="@id/text_view_price"
+            app:layout_constraintLeft_toRightOf="@id/image_view_product"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/button_event"
-            app:layout_constraintLeft_toRightOf="@id/cardViewImage"
+            app:layout_constraintTop_toBottomOf="@id/text_view_name" />
+
+        <TextView
+            android:id="@+id/text_view_price"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:ellipsize="end"
             android:maxLines="1"
+            android:textColor="#040404"
             android:textSize="12sp"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
-
-        <LinearLayout
-            android:id="@+id/button_event"
-            android:layout_marginBottom="5dp"
-            app:layout_constraintTop_toBottomOf="@id/textViewPrice"
-            app:layout_constraintLeft_toRightOf="@id/cardViewImage"
+            android:textStyle="italic"
+            app:layout_constraintBottom_toTopOf="@id/button_event"
+            app:layout_constraintLeft_toRightOf="@id/image_view_product"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:gravity="center"
-            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@id/text_view_address" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/button_event"
             android:layout_width="0dp"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginBottom="3dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/image_view_product"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/text_view_price">
 
-            <LinearLayout
-                android:background="@drawable/background_button_corner_primary"
+            <TextView
                 android:id="@+id/button_add"
-                android:paddingVertical="5dp"
-                android:paddingHorizontal="20dp"
-                android:gravity="center"
-                android:layout_marginEnd="50dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:textColor="@color/white"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Add"/>
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:id="@+id/button_detail"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:background="@drawable/background_button_corner_primary"
+                android:gravity="center"
+                android:paddingHorizontal="22dp"
                 android:paddingVertical="5dp"
+                android:text="Thêm"
+                android:textColor="@color/white"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/button_detail"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/background_button_corner_purple"
                 android:paddingHorizontal="20dp"
-                android:background="@drawable/background_button_corner_purple">
-                <TextView
-                    android:textColor="@color/white"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Detail"/>
-            </LinearLayout>
-        </LinearLayout>
+                android:paddingVertical="5dp"
+                android:text="Chi tiết"
+                android:textColor="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
