--- a/app/src/main/res/layout/layout_list_order_history.xml
+++ b/app/src/main/res/layout/layout_list_order_history.xml
@@ -1,51 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    app:cardCornerRadius="5dp"
     android:layout_marginHorizontal="10dp"
-    android:layout_marginVertical="7dp"
-    app:cardElevation="5dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_marginVertical="3dp"
+    app:cardCornerRadius="5dp"
+    app:cardElevation="5dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:background="#FFF5E6"
-        android:padding="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="#FFF5E6"
+        android:padding="10dp">
 
         <TextView
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             android:id="@+id/text_view_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
-            tools:text="Ngày"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Ngày" />
 
         <TextView
             android:id="@+id/text_view_total_order_list"
-            app:layout_constraintTop_toBottomOf="@+id/text_view_date"
-            app:layout_constraintStart_toStartOf="parent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
-            tools:text="Tổng tiền"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_view_date"
+            tools:text="Tổng tiền" />
 
         <TextView
             android:id="@+id/button_detail"
-            android:layout_marginTop="4dp"
-            android:paddingVertical="3dp"
-            android:paddingHorizontal="15dp"
-            android:background="@drawable/background_button_corner_primary"
-            app:layout_constraintTop_toBottomOf="@+id/text_view_total_order_list"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
+            android:layout_marginTop="4dp"
+            android:background="@drawable/background_button_corner_primary"
+            android:paddingHorizontal="15dp"
+            android:paddingVertical="3dp"
+            android:text="Chi tiết"
             android:textColor="@color/white"
-            android:text="Chi tiết"/>
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_view_total_order_list" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
