--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -16,29 +16,25 @@
         app:title="FOODHUB"
         app:titleTextColor="#FF5019" />
 
+    <EditText
+        android:id="@+id/edit_text_search"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/background_search"
+        android:hint="Tìm món ăn"
+        android:padding="10dp"
+        app:layout_constraintTop_toBottomOf="@id/toolbar_home"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_product"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_below="@id/toolbar_home"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintTop_toBottomOf="@id/edit_text_search"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_home"
         tools:listitem="@layout/layout_item_product" />
-
-    <!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
-    <!--        app:layout_constraintTop_toBottomOf="@+id/recycler_view_product"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        android:id="@+id/bottom_navigation"-->
-    <!--        app:menu="@menu/menu_bottom_navigation"-->
-    <!--        android:background="#F4F4F4"-->
-    <!--        app:itemIconTint="@color/primary"-->
-    <!--        app:itemTextColor="@color/primary"-->
-    <!--        app:itemIconSize="28dp"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="52dp"/>-->
 
     <include
         android:id="@+id/layout_loading"
